src/objects/MT_MediaFlightMotiveAllocation__c.object
<CustomObject>
    <description>Speichert die Zuordnung eines Motivs zu einem Flight und enthält zusätzliche, buchungsrelevante Informationen zur Ausstrahlung.</description>
    <fields>
        <fullName>MT_From__c</fullName>
        <description>Start der Ausstrahlung des Motivs, muss innerhalb der Flightlaufzeit liegen.</description>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_MediaFlight_ref__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Der Flight, dem das Motiv zugeordnet wird.</description>
        <label>Media Flight</label>
        <referenceTo>MT_MediaFlight__c</referenceTo>
        <relationshipLabel>Media Flight Motive Allocations</relationshipLabel>
        <relationshipName>MT_Media_Flight_Motive_Allocations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_MediaMotive_ref__c</fullName>
        <description>Das Motiv, das dem Flight zugeordnet wird.</description>
        <label>Media Motive</label>
        <referenceTo>MT_MediaMotive__c</referenceTo>
        <relationshipLabel>Media Flight Motive Allocations</relationshipLabel>
        <relationshipName>MediaFlightMotiveAllocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>MT_MediaProduct_ref__c</fullName>
        <description>Das Produkt, dass in dieser Zuordnung gebucht wird. Kann von dem Master des Motivs abweichen (z.B. bei allgemeinen Remindern, die im Paket mit einem spezifischen Produkt verwendet werden).</description>
        <label>Advertised Media Product</label>
        <referenceTo>MT_AdvertisedMediaProduct__c</referenceTo>
        <relationshipLabel>Media Flight Motive Allocations</relationshipLabel>
        <relationshipName>Media_Flight_Motive_Allocations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MT_Position__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Die Position des Motivs innerhalb des Flights.</description>
        <label>Position</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_RollingDistribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Buchungsvorgabe, ob das Motiv mittels rollierender Verteilung gebucht werden soll, oder nicht.</description>
        <label>Rolling Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_To__c</fullName>
        <description>Ende der Ausstrahlung des Motivs, muss innerhalb der Flightlaufzeit liegen.</description>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_Type__c</fullName>
        <description>Die Art der Zuordnung (Haupt, Reminder). Nicht als Record Type, da keine funktionalen oder logischen Abhängigkeiten gegeben sind.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Main</fullName>
                    <default>true</default>
                    <label>Main</label>
                </value>
                <value>
                    <fullName>Reminder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Media Flight Motive Allocation</label>
    <nameField>
        <displayFormat>MFMA-{00000}</displayFormat>
        <label>Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Flight Motive Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>